ground material with emission 2 and image alb with opposing light color standard specular shader

--- a/spaceMultiplayer/Assembly-CSharp.csproj
+++ b/spaceMultiplayer/Assembly-CSharp.csproj
@@ -71,9 +71,9 @@
     <Compile Include="Assets\Extras\Standard Assets\ParticleSystems\Scripts\ParticleSystemMultiplier.cs" />
     <Compile Include="Assets\Extras\Standard Assets\ParticleSystems\Scripts\SmokeParticles.cs" />
     <Compile Include="Assets\Extras\Standard Assets\ParticleSystems\Scripts\WaterHoseParticles.cs" />
-    <Compile Include="Assets\PlayerSetup.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerMotor.cs" />
+    <Compile Include="Assets\Scripts\PlayerSetup.cs" />
     <None Include="Assets\Extras\Standard Assets\Prototyping\Shaders\WorldCoordDiffuse.shader" />
     <None Include="Assets\Extras\Standard Assets\ParticleSystems\Shaders\PriorityParticleAlpha.shader" />
     <None Include="Assets\Extras\Standard Assets\ParticleSystems\ParticleSystemsGuidelines.txt" />
