player shoot script added to player and player weapon added to script directory

--- a/spaceMultiplayer/Assembly-CSharp.csproj
+++ b/spaceMultiplayer/Assembly-CSharp.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerMotor.cs" />
     <Compile Include="Assets\Scripts\PlayerSetup.cs" />
+    <Compile Include="Assets\Scripts\PlayerShoot.cs" />
+    <Compile Include="Assets\Scripts\PlayerWeapon.cs" />
     <None Include="Assets\Extras\Standard Assets\Prototyping\Shaders\WorldCoordDiffuse.shader" />
     <None Include="Assets\Extras\Standard Assets\ParticleSystems\Shaders\PriorityParticleAlpha.shader" />
     <None Include="Assets\Extras\Standard Assets\ParticleSystems\ParticleSystemsGuidelines.txt" />
